modified capture templates a bit

--- a/emacs.org
+++ b/emacs.org
@@ -756,18 +756,16 @@ switching similiar to it. Very nice!
                  "* TODO %?\n%U\n%a\n" :clock-in t :clock-resume t)
                 ("n" "note" entry (file+headline "~/Documents/org/notes.org" "Notizen")
                  "* %?\n%U\n" :clock-in t :clock-resume t)
-                ("b" "blog entry" entry (file+headline "~/Documents/org/inbox.org" "Inbox")
+                ("w" "blog entry" entry (file+headline "~/Documents/org/inbox.org" "Inbox")
                  "* TODO %? :blog:\n%U\n" :clock-in t :clock-resume t)
                 ("j" "Journal" entry (file+datetree "~/Documents/org/priv/diary.org")
                  "* %?\n%U\n" :clock-in t :clock-resume t)
-                ("w" "org-protocol" entry (file+headline "~/Documents/org/inbox.org" "Inbox")
-                 "* TODO Review %c\n%U\n" :immediate-finish t)
                 ("m" "Meeting" entry (file+headline "~/Documents/org/inbox.org" "Inbox")
                  "* MEETING with %? :MEETING:\n%U" :clock-in t :clock-resume t)
                 ("c" "Phone call" entry (file+headline "~/Documents/org/inbox.org" "Inbox")
                  "* PHONE %? :PHONE:\n%U" :clock-in t :clock-resume t)
-                ("h" "Habit" entry (file+headline "~/Documents/org/inbox.org" "Inbox")
-                 "* NEXT %?\n%U\n%a\nSCHEDULED: %(format-time-string \"<%Y-%m-%d %a .+1d/3d>\")\n:PROPERTIES:\n:STYLE: habit\n:REPEAT_TO_STATE: NEXT\n:END:\n")
+                ("b" "Bookmark" entry (file+headline "~/Documents/org/bookmarks.org" "Inbox")
+                 "* %?")
                 ("p" "password" entry (file "~/Documents/org/passwords.gpg")
                  "* %^{Title}\n  %^{URL}p %^{USERNAME}p %^{PASSWORD}p"))))
 
