--- a/emacs.org
+++ b/emacs.org
@@ -1567,9 +1567,12 @@ We want to be able to edit CMake files in a sane way.
   (use-package magit
     :commands magit-status
     :init (progn
-            (setq magit-last-seen-setup-instructions "1.4.0")
             (when (featurep 'ns)
-              (setq magit-emacsclient-executable "/usr/local/bin/emacsclient"))))
+              (setq magit-emacsclient-executable "/usr/local/bin/emacsclient")))
+    :config (progn
+              (add-to-list 'magit-no-confirm 'stage-all-changes)
+              (setq magit-push-always-verify nil)
+              (setq magit-last-seen-setup-instructions "2.1.0")))
 #+end_src
 
 ** mail-mode
