--- a/emacs.org
+++ b/emacs.org
@@ -358,7 +358,7 @@ prompt
 root-privileges (using tramp/sudo), if the file is not writable by
 user."
   (interactive)
-  (let ((file (ido-read-file-name "Edit as root: ")))
+  (let ((file (helm-read-file-name "Edit as root: ")))
     (unless (file-writable-p file)
       (setq file (concat "/sudo:root@localhost:" file)))
     (find-file file)))
@@ -1242,30 +1242,30 @@ all minibuffer actions. Just have a look at [[https://www.youtube.com/watch?v=Af
 impression.
 
 #+begin_src emacs-lisp
-  (use-package ido
-    :init (progn
-            (ido-mode t)
-            (ido-everywhere 1)
-            (setq ido-enable-flex-matching t
-                  redisplay-dont-pause t
-                  ido-use-faces nil
-                  ido-auto-merge-work-directories-length -1)
-            (set-default 'imenu-auto-rescan t)))
+  ;; (use-package ido
+  ;;   :init (progn
+  ;;           (ido-mode t)
+  ;;           (ido-everywhere 1)
+  ;;           (setq ido-enable-flex-matching t
+  ;;                 redisplay-dont-pause t
+  ;;                 ido-use-faces nil
+  ;;                 ido-auto-merge-work-directories-length -1)
+  ;;           (set-default 'imenu-auto-rescan t)))
 
-  (use-package flx-ido
-    :init (progn
-            (flx-ido-mode 1)))
+  ;; (use-package flx-ido
+  ;;   :init (progn
+  ;;           (flx-ido-mode 1)))
 
-  (use-package ido-vertical-mode
-    :init (progn
-            (ido-vertical-mode)
+  ;; (use-package ido-vertical-mode
+  ;;   :init (progn
+  ;;           (ido-vertical-mode)
 
-            (custom-set-variables
-             '(ido-vertical-define-keys 'C-n-C-p-up-and-down))))
+  ;;           (custom-set-variables
+  ;;            '(ido-vertical-define-keys 'C-n-C-p-up-and-down))))
 
-  (use-package ido-ubiquitous
-    :init (progn
-            (ido-ubiquitous-mode 1)))
+  ;; (use-package ido-ubiquitous
+  ;;   :init (progn
+  ;;           (ido-ubiquitous-mode 1)))
 #+end_src
 
 ** yasnippet
@@ -2213,7 +2213,7 @@ Because it’s not much mail!
 When a file isn't writable, re-open it as root.
 
 #+begin_src emacs-lisp
-(defadvice ido-find-file (after find-file-sudo activate)
+(defadvice helm-find-files (after find-file-sudo activate) ; ido-find-file
   "Find file as root if necessary."
   (unless (and buffer-file-name
                (file-writable-p buffer-file-name))
@@ -2223,19 +2223,19 @@ When a file isn't writable, re-open it as root.
 ** smex
 
 #+begin_src emacs-lisp
-  (use-package smex
-    :commands ck/smex
-    :bind ("M-x" . ck/smex)
-    :config (progn
-              (smex-initialize)
-              (setq smex-save-file "~/.smex")
-              (smex-auto-update)
+  ;; (use-package smex
+  ;;   :commands ck/smex
+  ;;   :bind ("M-x" . ck/smex)
+  ;;   :config (progn
+  ;;             (smex-initialize)
+  ;;             (setq smex-save-file "~/.smex")
+  ;;             (smex-auto-update)
 
-              (defun ck/smex (x)
-                (interactive "p")
-                (if (= x 1)
-                    (smex)
-                  (smex-major-mode-commands)))))
+  ;;             (defun ck/smex (x)
+  ;;               (interactive "p")
+  ;;               (if (= x 1)
+  ;;                   (smex)
+  ;;                 (smex-major-mode-commands)))))
 #+end_src
 
 ** go-mode
@@ -2269,3 +2269,34 @@ When a file isn't writable, re-open it as root.
                     alchemist-complete-debug-mode nil
                     alchemist-hooks-test-on-save t)))
 #+end_src
+
+** helm
+
+#+begin_src emacs-lisp
+  (use-package helm-config
+    :init (progn
+            (define-key helm-map (kbd "<tab>") 'helm-execute-persistent-action) ; rebind tab to run persistent action
+            (define-key helm-map (kbd "C-i") 'helm-execute-persistent-action) ; make TAB works in terminal
+            (define-key helm-map (kbd "C-z")  'helm-select-action) ; list actions using C-z
+
+            (setq helm-split-window-in-side-p t
+                  helm-move-to-line-cycle-in-source t
+                  helm-ff-search-library-in-sexp t
+                  helm-scroll-amount 8
+                  helm-mode-fuzzy-match t
+                  helm-buffers-fuzzy-matching t)
+
+            (setq helm-autoresize-max-height 30
+                  helm-autoresize-min-height 30)
+            (helm-autoresize-mode t)
+
+            (global-set-key (kbd "M-y") 'helm-show-kill-ring)
+            (global-set-key (kbd "C-x b") 'helm-mini)
+
+            (helm-mode 1)))
+
+  (use-package helm-projectile
+    :init (progn
+            (helm-projectile-on)))
+#+end_src
+
