fix: loading order matters

--- a/emacs.org
+++ b/emacs.org
@@ -2275,10 +2275,6 @@ When a file isn't writable, re-open it as root.
 #+begin_src emacs-lisp
   (use-package helm-config
     :init (progn
-            (define-key helm-map (kbd "<tab>") 'helm-execute-persistent-action) ; rebind tab to run persistent action
-            (define-key helm-map (kbd "C-i") 'helm-execute-persistent-action) ; make TAB works in terminal
-            (define-key helm-map (kbd "C-z")  'helm-select-action) ; list actions using C-z
-
             (setq helm-split-window-in-side-p t
                   helm-move-to-line-cycle-in-source t
                   helm-ff-search-library-in-sexp t
@@ -2288,12 +2284,17 @@ When a file isn't writable, re-open it as root.
 
             (setq helm-autoresize-max-height 30
                   helm-autoresize-min-height 30)
+
+            (helm-mode 1)
+
             (helm-autoresize-mode t)
 
             (global-set-key (kbd "M-y") 'helm-show-kill-ring)
             (global-set-key (kbd "C-x b") 'helm-mini)
 
-            (helm-mode 1)))
+            (define-key helm-map (kbd "<tab>") 'helm-execute-persistent-action)
+            (define-key helm-map (kbd "C-i") 'helm-execute-persistent-action)
+            (define-key helm-map (kbd "C-z")  'helm-select-action)))
 
   (use-package helm-projectile
     :init (progn
