--- a/emacs.org
+++ b/emacs.org
@@ -2329,3 +2329,8 @@ When a file isn't writable, re-open it as root.
                                              "jQuery" "Ruby on Rails" "Ruby" "Go"
                                              "C" "C++" "Elixir"))))
 #+end_src
+** puppet
+
+#+begin_src emacs-lisp
+(use-package puppet-mode)
+#+end_src
