--- a/emacs.org
+++ b/emacs.org
@@ -2020,7 +2020,8 @@ prefix argument."
       ("a" magit-status "magit-status")
       ("m" notmuch "notmuch")
       ("p" sql-postgres "sql-postgres")
-      ("b" (compile (format "~/dev/blog_pub/blog.rb %s" (expand-file-name (buffer-file-name)))) "blog it")
+      ("u" (start-process "dump" "*dump*" "~/dev/mail/dump.sh") "dump tags")
+      ("U" (start-process "restore" "*dump*" "~/dev/mail/restore.sh") "restore tags")
       ("z" (start-process "sync-mail" "*sync-mail*" "~/dev/mail/sync-mail") "sync mail")))
 #+end_src
 
