--- a/emacs.org
+++ b/emacs.org
@@ -1606,6 +1606,7 @@ We want to be able to edit CMake files in a sane way.
     :commands magit-status
     :init (progn
             (when (or (featurep 'ns) (featurep 'mac))
+              (setq magit-git-executable "/usr/local/bin/git")
               (setq magit-emacsclient-executable "/usr/local/bin/emacsclient")))
     :config (progn
               (add-to-list 'magit-no-confirm 'stage-all-changes)
