--- a/emacs.org
+++ b/emacs.org
@@ -737,7 +737,7 @@ switching similiar to it. Very nice!
   (add-to-list 'auto-mode-alist '("\\.\\(org\\|org_archive\\)$" . org-mode))
 
   (setq org-directory "~/Documents/org")
-  (setq org-mobile-directory "/scpc:ckruse@jugulator.defunced.de:/var/www/cloud.defunct.ch/htdocs/org")
+  (setq org-mobile-directory "/scp:ckruse@jugulator.defunced.de:/var/www/cloud.defunct.ch/htdocs/org")
   (setq org-agenda-files (quote ("~/Documents/org/" "~/Documents/org/priv"
                                  "~/Documents/org/work" "~/Documents/org/foss")))
   (setq org-mobile-inbox-for-pull "~/Documents/org/inbox.org")
